Update Product list loadtion

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,7 @@ body {
   display: grid;
   grid-template-areas: "header" "main" "footer";
   grid-template-columns: 1fr;
-  grid-template-rows: 10rem 1fr 4rem;
+  grid-template-rows: 10rem 1fr 6rem;
   height: 100%;
   background: #fff;
   min-height: 100%;
@@ -163,9 +163,13 @@ body {
   grid-area: footer;
   background-color: #494141;
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  padding: 3px;
+
+}
+
+.footer div{
+  margin: 1rem;
 }
 
 /* Home Screen */
@@ -175,28 +179,27 @@ body {
 
 }
 
+
 .products {
   
   margin-top: 2rem;
 
   display: flex;
-  justify-content: left;
-  align-items: flex-start;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  padding: 0;
   text-align: center;
-  
+
 
 }
 
 .products li {
-  
-  flex: 0 1 29rem;
+
+  flex: 0 1 25rem;
   height: 25rem;
   list-style: none;
-  padding: .1rem;
+  padding: 1rem;
   border-bottom: .1rem cornflowerblue solid;
-  margin: .5rem;
+  margin: 1rem;
 }
 
 .product {
@@ -266,6 +269,7 @@ body {
 
   position: relative;
   margin-top: .5rem;
+
   font-family: "Lato", sans-serif;
   height: 100%;
 
@@ -281,14 +285,14 @@ body {
 
 .sidebar li {
   margin: 0;
-  padding: 0;
+
   list-style: none;
   text-decoration: none;
 }
 
 .sidebar li #title {
   background-color: #489bd3;
-  padding: 1rem 3rem;
+  padding: 1.2rem 4rem;
   white-space: nowrap;
   text-decoration: none;
   font-size: 1.7rem;
@@ -299,7 +303,7 @@ body {
 
 .sidebar li a {
 
-  padding: 1rem 3rem;
+  padding: 1rem 4rem;
   white-space: nowrap;
   text-decoration: none;
   font-size: 1.7rem;
